test/files/run/t6440b.check
error: newSource1.scala:4: Symbol 'type pack1.T' is missing from the classpath.
This symbol is required by 'method pack1.U.t'.
Make sure that type T is in your classpath and check for conflicting dependencies with `-Ylog-classpath`.
A full rebuild may help if 'U.class' was compiled against an incompatible version of pack1.
      pack2.V.u.t // we have to fail if T.class is missing
      ^
